--- a/RMS/RMS/RMS.csproj
+++ b/RMS/RMS/RMS.csproj
@@ -60,6 +60,12 @@
     <Compile Include="ColumnComboBox.Designer.cs">
       <DependentUpon>ColumnComboBox.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\frmLocationMaster.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\frmLocationMaster.Designer.cs">
+      <DependentUpon>frmLocationMaster.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\frmLogin.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -71,6 +77,12 @@
     </Compile>
     <Compile Include="Forms\frmMain.Designer.cs">
       <DependentUpon>frmMain.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\frmSubLocation.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\frmSubLocation.Designer.cs">
+      <DependentUpon>frmSubLocation.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\frmSupplierCategory.cs">
       <SubType>Form</SubType>
@@ -87,11 +99,17 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StringList.cs" />
+    <EmbeddedResource Include="Forms\frmLocationMaster.resx">
+      <DependentUpon>frmLocationMaster.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\frmLogin.resx">
       <DependentUpon>frmLogin.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\frmMain.resx">
       <DependentUpon>frmMain.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\frmSubLocation.resx">
+      <DependentUpon>frmSubLocation.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\frmSupplierCategory.resx">
       <DependentUpon>frmSupplierCategory.cs</DependentUpon>
