--- a/RMS/RMS/RMS.csproj
+++ b/RMS/RMS/RMS.csproj
@@ -51,6 +51,12 @@
     <Compile Include="ColumnComboBox.Designer.cs">
       <DependentUpon>ColumnComboBox.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\frmBankCards.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\frmBankCards.Designer.cs">
+      <DependentUpon>frmBankCards.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\frmLocationMaster.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -68,6 +74,12 @@
     </Compile>
     <Compile Include="Forms\frmMain.Designer.cs">
       <DependentUpon>frmMain.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\frmMenuDetails.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\frmMenuDetails.Designer.cs">
+      <DependentUpon>frmMenuDetails.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\frmSteward.cs">
       <SubType>Form</SubType>
@@ -93,9 +105,18 @@
     <Compile Include="Forms\frmSupplierDetails.Designer.cs">
       <DependentUpon>frmSupplierDetails.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\frmTableCategoryDetails.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\frmTableCategoryDetails.Designer.cs">
+      <DependentUpon>frmTableCategoryDetails.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StringList.cs" />
+    <EmbeddedResource Include="Forms\frmBankCards.resx">
+      <DependentUpon>frmBankCards.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\frmLocationMaster.resx">
       <DependentUpon>frmLocationMaster.cs</DependentUpon>
     </EmbeddedResource>
@@ -104,6 +125,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\frmMain.resx">
       <DependentUpon>frmMain.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\frmMenuDetails.resx">
+      <DependentUpon>frmMenuDetails.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\frmSteward.resx">
       <DependentUpon>frmSteward.cs</DependentUpon>
@@ -116,6 +140,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\frmSupplierDetails.resx">
       <DependentUpon>frmSupplierDetails.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\frmTableCategoryDetails.resx">
+      <DependentUpon>frmTableCategoryDetails.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
