--- a/RMS/RMS/RMS.csproj
+++ b/RMS/RMS/RMS.csproj
@@ -112,6 +112,12 @@
     <Compile Include="Forms\frmSteward.Designer.cs">
       <DependentUpon>frmSteward.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\frmSubCategoryMasterDetails.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\frmSubCategoryMasterDetails.Designer.cs">
+      <DependentUpon>frmSubCategoryMasterDetails.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\frmSubLocation.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -168,6 +174,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\frmSteward.resx">
       <DependentUpon>frmSteward.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\frmSubCategoryMasterDetails.resx">
+      <DependentUpon>frmSubCategoryMasterDetails.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\frmSubLocation.resx">
       <DependentUpon>frmSubLocation.cs</DependentUpon>
