--- a/RMS/RMS/RMS.csproj
+++ b/RMS/RMS/RMS.csproj
@@ -64,6 +64,12 @@
     <Compile Include="Forms\frmCategoryMasterDetails.Designer.cs">
       <DependentUpon>frmCategoryMasterDetails.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\frmCustomerDetails.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\frmCustomerDetails.Designer.cs">
+      <DependentUpon>frmCustomerDetails.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\frmDepartmentDetails.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -150,6 +156,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\frmCategoryMasterDetails.resx">
       <DependentUpon>frmCategoryMasterDetails.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\frmCustomerDetails.resx">
+      <DependentUpon>frmCustomerDetails.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\frmDepartmentDetails.resx">
       <DependentUpon>frmDepartmentDetails.cs</DependentUpon>
