--- a/RMS/RMS/RMS.csproj
+++ b/RMS/RMS/RMS.csproj
@@ -160,6 +160,12 @@
     <Compile Include="Forms\frmTableCategoryDetails.Designer.cs">
       <DependentUpon>frmTableCategoryDetails.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\frmTableDetails.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\frmTableDetails.Designer.cs">
+      <DependentUpon>frmTableDetails.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StringList.cs" />
@@ -216,6 +222,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\frmTableCategoryDetails.resx">
       <DependentUpon>frmTableCategoryDetails.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\frmTableDetails.resx">
+      <DependentUpon>frmTableDetails.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
