--- a/RMS/RMS/RMS.csproj
+++ b/RMS/RMS/RMS.csproj
@@ -124,6 +124,12 @@
     <Compile Include="Forms\frmRecipeDetails.Designer.cs">
       <DependentUpon>frmRecipeDetails.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\frmSetupSetting.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\frmSetupSetting.Designer.cs">
+      <DependentUpon>frmSetupSetting.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\frmSteward.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -204,6 +210,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\frmRecipeDetails.resx">
       <DependentUpon>frmRecipeDetails.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\frmSetupSetting.resx">
+      <DependentUpon>frmSetupSetting.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\frmSteward.resx">
       <DependentUpon>frmSteward.cs</DependentUpon>
