--- a/RMS/RMS/RMS.csproj
+++ b/RMS/RMS/RMS.csproj
@@ -45,6 +45,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="clsCommonMethods.cs" />
+    <Compile Include="clsDBConection.cs" />
     <Compile Include="clsGlobleVariable.cs" />
     <Compile Include="ColumnComboBox.cs">
       <SubType>Component</SubType>
@@ -57,6 +59,12 @@
     </Compile>
     <Compile Include="Forms\frmBankCards.Designer.cs">
       <DependentUpon>frmBankCards.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\frmBrowsData.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\frmBrowsData.Designer.cs">
+      <DependentUpon>frmBrowsData.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\frmCategoryMasterDetails.cs">
       <SubType>Form</SubType>
@@ -165,6 +173,9 @@
     <Compile Include="StringList.cs" />
     <EmbeddedResource Include="Forms\frmBankCards.resx">
       <DependentUpon>frmBankCards.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\frmBrowsData.resx">
+      <DependentUpon>frmBrowsData.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\frmCategoryMasterDetails.resx">
       <DependentUpon>frmCategoryMasterDetails.cs</DependentUpon>
