--- a/RMS/RMS/RMS.csproj
+++ b/RMS/RMS/RMS.csproj
@@ -60,6 +60,12 @@
     <Compile Include="Forms\frmBankCards.Designer.cs">
       <DependentUpon>frmBankCards.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\frmBrowsData.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\frmBrowsData.Designer.cs">
+      <DependentUpon>frmBrowsData.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\frmCategoryMasterDetails.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -179,6 +185,9 @@
     <Compile Include="StringList.cs" />
     <EmbeddedResource Include="Forms\frmBankCards.resx">
       <DependentUpon>frmBankCards.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\frmBrowsData.resx">
+      <DependentUpon>frmBrowsData.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\frmCategoryMasterDetails.resx">
       <DependentUpon>frmCategoryMasterDetails.cs</DependentUpon>
