--- a/RMS/BusinessObject/BusinessObject.csproj
+++ b/RMS/BusinessObject/BusinessObject.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="objCategoryMaster.cs" />
     <Compile Include="objDepartment.cs" />
     <Compile Include="objStatusMaster.cs" />
     <Compile Include="objSubLocation.cs" />
