--- a/RMS/BusinessLogic/BusinessLogic.csproj
+++ b/RMS/BusinessLogic/BusinessLogic.csproj
@@ -46,6 +46,8 @@
     <Compile Include="clsStatusMaster.cs" />
     <Compile Include="clsSteward.cs" />
     <Compile Include="clsSubLocation.cs" />
+    <Compile Include="clsTableCategory.cs" />
+    <Compile Include="clsTableMaster.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
