--- a/RMS/BusinessLogic/BusinessLogic.csproj
+++ b/RMS/BusinessLogic/BusinessLogic.csproj
@@ -51,6 +51,7 @@
     <Compile Include="clsSteward.cs" />
     <Compile Include="clsSubLocation.cs" />
     <Compile Include="clsSupplierCategory.cs" />
+    <Compile Include="clsSupplierMaster.cs" />
     <Compile Include="clsTableCategory.cs" />
     <Compile Include="clsTableMaster.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
