--- a/RMS/BusinessObject/BusinessObject.csproj
+++ b/RMS/BusinessObject/BusinessObject.csproj
@@ -44,8 +44,10 @@
     <Compile Include="objBankCardType.cs" />
     <Compile Include="objCurrencyMaster.cs" />
     <Compile Include="objCustomerMaster.cs" />
+    <Compile Include="objMainLocation.cs" />
     <Compile Include="objMenuCategory.cs" />
     <Compile Include="objMenuDepartment.cs" />
+    <Compile Include="objSetupSetting.cs" />
     <Compile Include="objSupplierCategory.cs" />
     <Compile Include="objSupplierMaster.cs" />
     <Compile Include="objTableMaster.cs" />
