--- a/RMS/BusinessLogic/BusinessLogic.csproj
+++ b/RMS/BusinessLogic/BusinessLogic.csproj
@@ -47,8 +47,10 @@
     <Compile Include="clsCurrencyMaster.cs" />
     <Compile Include="clsCustomerMaster.cs" />
     <Compile Include="clsDepartment.cs" />
+    <Compile Include="clsMainLocation.cs" />
     <Compile Include="clsMenuCategory.cs" />
     <Compile Include="clsMenuDepartment.cs" />
+    <Compile Include="clsSetupSetting.cs" />
     <Compile Include="clsStatusMaster.cs" />
     <Compile Include="clsSteward.cs" />
     <Compile Include="clsSubLocation.cs" />
