--- a/RMS/RMS/RMS.csproj
+++ b/RMS/RMS/RMS.csproj
@@ -53,6 +53,12 @@
     <Compile Include="ColumnComboBox.Designer.cs">
       <DependentUpon>ColumnComboBox.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\Extra\frmItemDiscount.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Extra\frmItemDiscount.Designer.cs">
+      <DependentUpon>frmItemDiscount.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\Master Details\frmBankCards.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -235,6 +241,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
     <Compile Include="StringList.cs" />
+    <EmbeddedResource Include="Forms\Extra\frmItemDiscount.resx">
+      <DependentUpon>frmItemDiscount.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\Master Details\frmBankCards.resx">
       <DependentUpon>frmBankCards.cs</DependentUpon>
     </EmbeddedResource>
@@ -358,9 +367,7 @@
       <Name>DataAccess</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Forms\Extra\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
